sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:16: error: 'while' expected but '}' found.
} 
^